xorg-server (2:1.20.4-1ubuntu1) UNRELEASED; urgency=medium

  * Merge from Debian.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 06 Mar 2019 09:05:02 +0200

xorg-server (2:1.20.4-1) unstable; urgency=medium

  [ Timo Aaltonen ]
  * New upstream release.
    - present/wnmd: Fix use after free on CRTC removal
      (Closes: #920665).
    - xwayland: Replace xwl_window::present_window with
      ::present_flipped (Closes: #921734).

  [ Andreas Boll ]
  * Refresh 07_use-modesetting-driver-by-default-on-GeForce.diff.

 -- Andreas Boll <aboll@debian.org>  Tue, 05 Mar 2019 21:11:12 +0100

xorg-server (2:1.20.3-1ubuntu1) disco; urgency=medium

  * Merge from Debian.
    - CVE-2018-14665.patch, dont-init-glamor-on-llvmpipe.diff,
      prime-sync-refactor.diff: Dropped, upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 22 Nov 2018 15:47:34 +0200

xorg-server (2:1.20.3-1) unstable; urgency=medium

  * New upstream release.
    - Disables -logfile and -modulepath when running with elevated
      privileges (CVE-2018-14665).

 -- Andreas Boll <aboll@debian.org>  Thu, 25 Oct 2018 20:15:23 +0200

xorg-server (2:1.20.2-1) unstable; urgency=medium

  * New upstream release.
    - Fixes various crashes with xwayland (Closes: #777625, #881891,
      #911146).
    - Fixes a crash when running the X server inside virtualbox
      (Closes: #911680).
  * Drop 08_dont-init-glamor-on-llvmpipe.diff, upstream.
  * Set source format to 1.0.

 -- Andreas Boll <aboll@debian.org>  Thu, 25 Oct 2018 10:19:31 +0200

xorg-server (2:1.20.1-5) unstable; urgency=medium

  [ Timo Aaltonen ]
  * 08_dont-init-glamor-on-llvmpipe.diff: Glamor shouldn't be used on
    llvmpipe, as it might end up crashing the server on a racy bootup.
    (LP: #1792932) (Closes: #907655, #910135)

 -- Andreas Boll <aboll@debian.org>  Wed, 10 Oct 2018 18:23:15 +0200

xorg-server (2:1.20.1-4) unstable; urgency=medium

  [ Julien Cristau ]
  * Disable libunwind in udeb build.