@@ -1,6 +1,7 @@
 xorg-server (2:1.20.4-1ubuntu1) UNRELEASED; urgency=medium
 
   * Merge from Debian.
+  * sync-i965-pciids.diff: Synced with mesa 19.0~.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Wed, 06 Mar 2019 09:05:02 +0200
 
